# Blog

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
testsite/: db.sqlite3
testsite/mysite/: settings.py  urls.py
testsite/news/: admin.py  forms.py  models.py  urls.py  views.py
testsite/news/migrations/: 0001_initial.py  0002_alter_news_options_alter_news_content_and_more.py  0003_category_news_category.py
testsite/news/templates/news/: add_news.html  category.html  index.html  list_categories.html  view_news.html
testsite/news/templatetags/: news_tags.py
testsite/newsdrf/: apps.py  serializers.py  urls.py  views.py
testsite/templates/: base.html
testsite/templates/inc/: _nav.html  _sidebar.html
